probably need to make more adjustments

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		.main-container .row {	
 			margin: 20px 0px;
 		}
+		.main-container .card {
+			min-height: 231px;
+		}
 	</style>
 	<title></title>
 </head>
